updating delete person and some others in headless-impl.
